todo_project/manifests/back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  namespace: project
  name: todoserver-dep
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: todoserver
  template:
    metadata:
      labels:
        app: todoserver
    spec:
      volumes: 
        - name: shared-todo
          persistentVolumeClaim:
            claimName: todo-claim
      containers:
        - name: todoserver
          image: brontto/todo_server:ehr5tgergwaedf
          volumeMounts:
          - name: shared-todo
            mountPath: /usr/src/app/files
