todo_project/manifests/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: todofront-dep
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: todofront
  template:
    metadata:
      labels:
        app: todofront
    spec:
      containers:
        - name: todofront
          image: brontto/todo_front:asdfgafsdg
