todo_project/manifests/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todofront-svc
spec:
  type: ClusterIP
  selector: 
    app: todofront
  ports:
    - port: 2343
      protocol: TCP
      targetPort: 3000
